kubernetes/fraud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-deployment
  namespace: xibank
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fraud
  template:
    metadata:
      labels:
        app: fraud
    spec:
      containers:
        - name: fraud
          image: emmiduh93/fraud-service:v1.1
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
