kubernetes/ledger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-deployment
  namespace: xibank
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ledger
  template:
    metadata:
      labels:
        app: ledger
    spec:
      containers:
        - name: ledger
          image: emmiduh93/ledger-service:v1.0
          ports:
            - containerPort: 4000
          livenessProbe:
            httpGet:
              path: /
              port: 4000
